# Blit

./: .gitignore  2026-04-07-112350-this-session-is-being-continued-from-a-previous-c.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_REQUIREMENTS.md  Cargo.toml  DEVLOG.md  GEMINI.md  LICENSE  README.md  REVIEW.md  TODO.md  Windows_Build_Failures.txt  codex_resume  errors.txt  package-lock.json
.agents/: artifact-manifest.json  decisions.md  governance-inventory.md  harvest.md  machines.md  push-policy.md  repo-guidance.md  repo-map.json  state.md
.cargo/: config.toml
.claude/: settings.json
.review/: README.md  check-state.sh  coder-wait.sh  reviewer-wait.sh
.serena/: project.yml
agentcomms/: gemini-1.md  gemini-2.md  gemini-3.md  gemini-4.md  macGPT-1.md  macGPT-10.md  macGPT-11.md  macGPT-12.md  macGPT-2.md  macGPT-3.md  macGPT-4.md  macGPT-5.md  macGPT-6.md  macGPT-7.md  macGPT-8.md  macGPT-9.md  nova-1.md  nova-10.md  nova-11.md  nova-12.md  nova-13.md  nova-14.md  nova-15.md  nova-2.md  nova-22.md  nova-23.md  nova-24.md  nova-25.md  nova-26.md  nova-27.md  (+99 more)
crates/blit-app/: Cargo.toml
crates/blit-app/src/: check.rs  client.rs  display.rs  endpoints.rs  lib.rs  profile.rs  progress.rs  scan.rs
crates/blit-app/src/admin/: df.rs  du.rs  find.rs  jobs.rs  list_modules.rs  ls.rs  mod.rs  rm.rs
crates/blit-app/src/diagnostics/: dump.rs  mod.rs  perf.rs
crates/blit-app/src/transfers/: compare.rs  dispatch.rs  filter.rs  local.rs  mod.rs  remote.rs  remote_remote_direct.rs  resolution.rs  retry.rs
crates/blit-cli/: Cargo.toml
crates/blit-cli/src/: admin.rs  check.rs  cli.rs  completions.rs  context.rs  df.rs  diagnostics.rs  du.rs  find.rs  jobs.rs  list.rs  list_modules.rs  ls.rs  main.rs  profile.rs  rm.rs  scan.rs  transfers.rs  util.rs
crates/blit-cli/src/transfers/: endpoints.rs  local.rs  mod.rs  remote.rs  remote_remote_direct.rs
crates/blit-cli/tests/: admin_verbs.rs  blit_utils.rs  cli_arg_safety_gates.rs  diagnostics_dump.rs  f2_chroot_containment.rs  jobs_lifecycle.rs  local_move_semantics.rs  pull_session_cutover.rs  push_session_cutover.rs  readonly_enforcement.rs  remote_checksum_negotiation.rs  remote_move.rs  remote_parity.rs  remote_pull_mirror.rs  remote_pull_subpath.rs  remote_push_mirror_safety.rs  remote_push_single_file.rs  remote_regression.rs  remote_remote.rs  remote_resume.rs  remote_tcp_fallback.rs  remote_transfer_edges.rs  single_file_copy.rs  transfer_lifecycle.rs  windows_metadata.rs
crates/blit-cli/tests/common/: mod.rs
crates/blit-core/: Cargo.toml  build.rs  build_identity.rs
crates/blit-core/src/: ._perf_predictor.rs  bandwidth.rs  buffer.rs  change_journal.rs  checksum.rs  copy.rs  delete.rs  deletion.rs  dial.rs  enumeration.rs  errors.rs  filter.rs  fs_enum.rs  lib.rs  local_worker.rs  logger.rs  manifest.rs  mdns.rs  mirror_planner.rs  orchestrator.rs  path_posix.rs  path_safety.rs  perf_history.rs  perf_predictor.rs  retry.rs  stderr_log.rs  tar_stream.rs  transfer_engine.rs  transfer_facade.rs  transfer_plan.rs  win_fs.rs  windows_metadata.rs  wire_metadata.rs  zero_copy.rs
crates/blit-core/src/auto_tune/: mod.rs
crates/blit-core/src/change_journal/: mod.rs  snapshot.rs  util.rs
crates/blit-core/src/copy/: compare.rs  file_copy.rs  mod.rs  parallel.rs  stats.rs  windows.rs
crates/blit-core/src/copy/file_copy/: clone.rs  mmap.rs  mod.rs  resume.rs
crates/blit-core/src/engine/: dial.rs  history.rs  journal.rs  mirror.rs  mod.rs  options.rs  single_file.rs  strategy.rs  streaming_plan.rs  summary.rs  tuning.rs
crates/blit-core/src/fs_capability/: macos.rs  mod.rs  probe.rs  unix.rs  windows.rs
crates/blit-core/src/orchestrator/: fast_path.rs  history.rs  mod.rs  options.rs  orchestrator.rs  planner.rs  summary.rs
crates/blit-core/src/remote/: endpoint.rs  grpc_server.rs  instrumentation.rs  mod.rs  pull.rs  push.rs  retry.rs  tuning.rs
crates/blit-core/src/remote/push/: data_plane.rs  mod.rs  payload.rs
crates/blit-core/src/remote/push/client/: helpers.rs  mod.rs  types.rs
crates/blit-core/src/remote/transfer/: abort_on_drop.rs  data_plane.rs  diff_planner.rs  faulted_path.rs  grpc_fallback.rs  lifecycle_trace.rs  mod.rs  operation_spec.rs  payload.rs  pipeline.rs  progress.rs  resume_diff.rs  session_client.rs  session_phase.rs  sink.rs  small_file_probe.rs  socket.rs  source.rs  stall_guard.rs  tar_safety.rs  tcp_info.rs
crates/blit-core/src/transfer_facade/: aggregator.rs  mod.rs  planner.rs
crates/blit-core/src/transfer_session/: data_plane.rs  local.rs  mod.rs  transport.rs
crates/blit-core/tests/: checksum_partial.rs  engine_streaming_plan.rs  enumeration_tests.rs  foundation_deadcode.rs  local_session.rs  local_transfers.rs  mirror_planner_tests.rs  predictor_streaming.rs  proto_wire_compat.rs  pull_sync_with_spec_wire.rs  transfer_session_roles.rs
crates/blit-daemon/: Cargo.toml
crates/blit-daemon/src/: active_jobs.rs  config.rs  delegation_gate.rs  main.rs  metrics.rs  net_timeout.rs  recents_store.rs  runtime.rs  service.rs
crates/blit-daemon/src/service/: ._pull_sync.rs  admin.rs  core.rs  delegated_pull.rs  delegated_session_e2e.rs  mod.rs  pull.rs  pull_sync.rs  transfer.rs  transfer_session_e2e.rs  util.rs
crates/blit-daemon/src/service/push/: control.rs  data_plane.rs  mod.rs  shape_resize_e2e.rs
crates/blit-prometheus-bridge/: Cargo.toml  README.md
crates/blit-prometheus-bridge/src/: main.rs  metrics.rs  server.rs
crates/blit-tui/: Cargo.toml
crates/blit-tui/src/: browse.rs  config.rs  config_reload.rs  daemons.rs  del_request.rs  diagnostics.rs  display_f1.rs  display_f2.rs  display_f3.rs  dual_pane.rs  exec_plan.rs  f1push.rs  f1trigger.rs  f3del.rs  f3du.rs  f3pull.rs  help.rs  main.rs  profile.rs  progress_accum.rs  state.rs  theme_color.rs  tick_budget.rs  transfer.rs  verify.rs
crates/blit-tui/src/screens/: dual_pane.rs  f1.rs  f2.rs  f3.rs  f4.rs  mod.rs
crates/blit-utils/: Cargo.toml
crates/blit-utils/src/: completions.rs  df.rs  du.rs  find.rs  list_modules.rs  ls.rs  main.rs  rm.rs  scan.rs  util.rs
(+2598 files in other folders)
