[workspace]
resolver = "2"
members = [
    "crates/blit-core",
    "crates/blit-app",
    "crates/blit-cli",
    "crates/blit-daemon",
    "crates/blit-tui",
    "crates/blit-prometheus-bridge",
]

[workspace.package]
license = "MIT"

[workspace.lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
