[workspace]
resolver = "2"
members = [
    "crates/blit-core",
    "crates/blit-app",
    "crates/blit-cli",
    "crates/blit-daemon",
    "crates/blit-tui",
    "crates/blit-prometheus-bridge",
]

[workspace.package]
version = "0.1.1"
license = "MIT"

[workspace.lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
