[package]
name = "blit-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

# The shipped command is named `blit`, matching every doc, manpage,
# and README example. Crate stays `blit-cli` to avoid rippling the
# workspace member name; only the produced binary is renamed via
# `[[bin]]`. Tests, scripts, and CI walk the build dir and look for
# `blit` / `blit.exe` (was `blit-cli` / `blit-cli.exe`).
[[bin]]
name = "blit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
blit-core = { path = "../blit-core" }
eyre = "0.6"
color-eyre = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
indicatif = "0.18"
walkdir = "2.5"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }

[dev-dependencies]
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
wait-timeout = "0.2"
filetime = "0.2"
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
