[package]
name = "blit-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

# The shipped command is named `blit`, matching every doc, manpage,
# and README example. Crate stays `blit-cli` to avoid rippling the
# workspace member name; only the produced binary is renamed via
# `[[bin]]`. Tests, scripts, and CI walk the build dir and look for
# `blit` / `blit.exe` (was `blit-cli` / `blit-cli.exe`).
[[bin]]
name = "blit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
blit-core = { path = "../blit-core" }
blit-app = { path = "../blit-app" }
eyre = "0.6"
color-eyre = "0.6"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
wait-timeout = "0.2"
filetime = "0.2"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
walkdir = "2.5"

[lints]
workspace = true
