[package]
name = "blit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
walkdir = "2.5"
globset = "0.4.17"
filetime = "0.2"
once_cell = "1.19"
rayon = "1.10"
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
tar = "0.4"
indicatif = "0.17"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

# gRPC dependencies
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Checksum dependencies
blake3 = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md5 = "0.7"

# OS-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
] }
normpath = "1.1"
