[package]
name = "blit-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
eyre = "0.6"
log = "0.4"
walkdir = "2.5"
globset = "0.4.18"
filetime = "0.2"
once_cell = "1.21"
rayon = "1.12"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
async-trait = "0.1"
tar = "0.4"
indicatif = "0.18"
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
base64 = "0.22"
mdns-sd = "0.19"
hostname = "0.4"
flume = "0.11"
owo-colors = "4"

# gRPC dependencies
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Checksum dependencies
blake3 = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md5 = "0.8"
socket2 = "0.6.3"

# OS-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
fsevent-sys = "5"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
] }
normpath = "1.5"

[lints]
workspace = true
