[package]
name = "blit-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
blit-core = { path = "../blit-core" }
tokio-stream = { version = "0.1", features = ["net"] }
eyre = "0.6"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = { version = "0.31", default-features = false, features = ["disk"] }

[dev-dependencies]
tempfile = "3"
