[package]
name = "blit-daemon"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
blit-core = { path = "../blit-core" }
tokio-stream = { version = "0.1", features = ["net"] }
eyre = "0.6"
base64 = "0.22"
rand = "0.10"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
tar = "0.4"
filetime = "0.2"
rayon = "1.12"
blake3 = "1.8"
socket2 = "0.6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
