[package]
name = "blit-daemon"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
blit-core = { path = "../blit-core" }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = "0.7"
eyre = "0.6"
log = "0.4"
base64 = "0.22"
rand = "0.10"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
tar = "0.4"
filetime = "0.2"
rayon = "1.12"
blake3 = "1.8"
socket2 = "0.6"
ipnet = "2.10"
idna = "1.0"
async-trait = "0.1"
walkdir = "2.5"
globset = "0.4.18"

[dev-dependencies]
tempfile = "3"
# `test-util` enables tokio::time::pause / advance, used by
# `receive_push_data_plane_aborts_on_stall` (audit-h3a) to exercise
# the production 30 s TRANSFER_STALL_TIMEOUT without wall-clock waits.
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
