[package]
name = "blit-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
blit-core = { path = "../blit-core" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", default-features = false, features = ["transport"] }
